# majocol

./: .flake8  .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: publish.yml  test.yml
majocol/: color.py  convert.py  types.py  utils.py
tests/: test_majocol.py  test_utils.py
